--- a/content/templates/tpl-hub/index.html
+++ b/content/templates/tpl-hub/index.html
@@ -1,3 +1,5 @@
+${layout.head}
+
 <main id="hub" data-views="page-hub">
     <section class="main-section">
         <header class="hero">
@@ -12,3 +14,5 @@
         </header>
     </section>
 </main>
+
+${layout.footer}
